# evestudy

./: Etudes.ipynb  README.md  pyproject.toml
src/evestudy/: bddmodel.py
tests/: test_bddmodel.py
